--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "next-rc",
+  "name": "neon-nextjs-rc",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Leandro Rodrigues Bertalhia",
+    "url": "https://github.com/leandrordg"
+  },
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
@@ -9,18 +13,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.9.4",
+    "@prisma/adapter-neon": "^5.16.1",
+    "@prisma/client": "^5.16.1",
+    "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
-    "next": "15.0.0-rc.0"
+    "ws": "^8.17.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/ws": "^8.5.10",
+    "bufferutil": "^4.0.8",
     "eslint": "^8",
-    "eslint-config-next": "15.0.0-rc.0"
+    "eslint-config-next": "15.0.0-rc.0",
+    "postcss": "^8",
+    "prisma": "^5.16.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
